Fixed missing core functionality